# orger

./: README.md  install.sh  main.py  pyproject.toml  uninsthall.sh  utils.py
.github/workflows/: release.yaml
src/orgi/: __init__.py  main.py  services.py
