[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orgi"
version = "0.1.1"  # Match your git tag
description = "File organization CLI tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=10.0.0",
]

[project.scripts]
orgi = "orgi.main:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["orgi"]
